Commencé construction IR pour bloc while